# Elm.tmLanguage

./: .gitignore  Elm Language Support.py  Elm Language Support.sublime-commands  ElmLanguageSupport.py  ElmLanguageSupport.sublime-commands  LICENSE  Main.sublime-menu  README.md  beta-repository.json  docs.json  elm_autocomplete.py  elm_format.py  elm_generate.py  elm_make.py  elm_open_in_browser.py  elm_package.py  elm_plugin.py  elm_project.py  elm_show_type.py  messages.json
Autogeneration Tool/: generate_elm_data.py
Build Systems/: Elm Make.sublime-build  Elm Package.sublime-build  elm_make.sublime-build
Color Scheme/: Color Scheme.cabal
Color Scheme/src/: Plist.hs
Commands/: Default.sublime-commands  Elm Format.sublime-commands  Open In Browser.sublime-commands  Package.sublime-commands  Project.sublime-commands  REPL.sublime-commands  Show Type.sublime-commands
Get Types/: get-elm-types.cabal
Get Types/src/: GetTypes.hs
Keymaps/: Default.sublime-keymap
Menus/: Context.sublime-menu  Main.sublime-menu
Preferences/: Comments.YAML-tmLanguage  Comments.tmPreferences  Indent Patterns.YAML-tmLanguage  Indent Patterns.tmPreferences  Metadata.YAML-tmLanguage  Metadata.tmPreferences
Settings/: Elm Language Support.sublime-settings  Elm User Strings.sublime-settings  Elm.sublime-settings
Syntax Highlighting/: Elm.sublime-settings  Elm.tmLanguage
Syntaxes/: Elm Compile Messages.YAML-tmLanguage  Elm Compile Messages.hidden-tmLanguage  Elm Documentation.YAML-tmLanguage  Elm Documentation.hidden-tmLanguage  Elm Documentation.hide-tmLanguage  Elm.tmLanguage  (+2 more)
(+368 files in other folders)
