name:                Color-Scheme
version:             0.1.0.0
synopsis:            Working with Sublime Text color schemes in Haskell
homepage:            https://github.com/deadfoxygrandpa/Elm.tmLanguage
license:             MIT
author:              Alex Neslusan
maintainer:          deadfoxygrandpa@gmail.com
-- copyright:
-- category:
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

Executable get-elm-types
    ghc-options:     -O2
    hs-source-dirs:  src

    Main-is:		 Plist.hs
    build-depends:   base >=4.7 && <4.8, plist >=0.0.4 && <0.1, hxt ==9.*, filepath >=1.3 && <1.4
